--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "zenn preview"
   },
   "devDependencies": {
+    "markdownlint": "^0.25.1",
+    "markdownlint-cli2": "^0.3.2",
     "prettier": "^2.5.1",
     "zenn-cli": "^0.1.101"
   }
