--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "start": "zenn preview"
   },
   "devDependencies": {
+    "@proofdict/textlint-rule-proofdict": "^3.1.2",
     "markdownlint": "^0.25.1",
     "markdownlint-cli2": "^0.3.2",
     "prettier": "^2.5.1",
+    "textlint": "^12.1.0",
+    "textlint-rule-ja-hiragana-fukushi": "^1.3.0",
+    "textlint-rule-ja-hiragana-hojodoushi": "^1.0.4",
+    "textlint-rule-ja-hiragana-keishikimeishi": "^1.1.0",
+    "textlint-rule-ja-no-redundant-expression": "^4.0.0",
+    "textlint-rule-ja-no-weak-phrase": "^2.0.0",
+    "textlint-rule-preset-jtf-style": "^2.3.12",
+    "textlint-rule-prh": "^5.3.0",
     "zenn-cli": "^0.1.101"
   }
 }
