--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdownlint-cli2": "^0.4.0",
     "prettier": "^2.7.1",
     "textlint": "^12.2.1",
+    "textlint-filter-rule-allowlist": "^4.0.0",
     "textlint-rule-ja-hiragana-fukushi": "^1.3.0",
     "textlint-rule-ja-hiragana-hojodoushi": "^1.0.4",
     "textlint-rule-ja-hiragana-keishikimeishi": "^1.1.0",
